# FastAuth

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml
scripts/: entrypoint.sh  prepare_db.cmd  prepare_db.ps1  prepare_db.sh
src/api/v1/auth/: authentication.py  social_auth.py
src/api/v1/endpoints/: healthcheck.py  main_router.py  side_router_1.py
src/api/v1/orm/: user_orm.py
src/core/config/: auth_config.py  config.py  logger.py  models.py
src/core/dependencies/: auth_deps.py  cookie_helper.py  form_data.py  user_helper.py
src/core/menu/: urls.py
src/core/schemas/pydantic_schemas/: auth_schema.py  user.py
src/core/services/auth/: auth.py  token_service.py  user_service.py
src/core/services/database/postgres/: dd_helper.py
src/core/services/database/postgres/models/: refresh_token.py  user.py
src/core/services/database/postgres/orm/: token_crud.py  user_orm.py
src/core/services/user/: token_service.py  user.py
src/core/utils/: prepared_templates.py
src/frontend/templates/includes/: menu.html
src/migrations/: env.py
